[gd_scene load_steps=8 format=2]

[ext_resource path="res://monster_1/monster_1.tscn" type="PackedScene" id=1]
[ext_resource path="res://monster_3/monster_3.gd" type="Script" id=2]
[ext_resource path="res://monster_3/scheletro_asce_spritesheet_v3.png" type="Texture" id=3]
[ext_resource path="res://monster_3/swing3.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "throw_axe_back_right"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 9 ), Vector2( 1, 9 ), Vector2( 2, 9 ), Vector2( 3, 9 ), Vector2( 4, 9 ), Vector2( 5, 9 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "throw_axe"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "throw_axe_front_left"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 10 ), Vector2( 1, 10 ), Vector2( 2, 10 ), Vector2( 3, 10 ), Vector2( 4, 10 ), Vector2( 5, 10 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "throw_axe"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "throw_axe_front_right"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 8 ), Vector2( 1, 8 ), Vector2( 2, 8 ), Vector2( 3, 8 ), Vector2( 4, 8 ), Vector2( 5, 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "throw_axe"
} ]
}

[node name="monster_3" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
position = Vector2( -1, 0 )
texture = ExtResource( 3 )
vframes = 12
frame = 110

[node name="AxeAnimationPlayer" parent="Sprite" index="2"]
anims/throw_axe_back_right = SubResource( 1 )
anims/throw_axe_front_left = SubResource( 2 )
anims/throw_axe_front_right = SubResource( 3 )

[node name="ThrowRight" type="Position2D" parent="." index="9"]
position = Vector2( 40, -21 )

[node name="ThrowLeft" type="Position2D" parent="." index="10"]
position = Vector2( -40, -21 )

[node name="Throw" type="AudioStreamPlayer2D" parent="." index="11"]
stream = ExtResource( 4 )
